--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@
     <header class="header">
         <div class="header__container">
             <h1 class="header__title col-sm-12 col-lg-5">5 formas de cuidar tu corte de cabello</h1>
+            <a href="#article"><i class="header__scroll fas fa-angle-double-down fa-4x"></i></a>
         </div>
     </header>
 
 
     <!------------------- ARTICLE ---------------------->
-    <article class="article py-5">
+    <article id="article" class="article py-5">
         <div class="article__container px-5">
             <h3 class="article__date">12 de abril de 2018</h3>
             <p class="article__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat vero
@@ -94,8 +95,14 @@
                 molestias sed. Voluptatibus ducimus tempora illum a quis ipsam perspiciatis voluptatem facere autem
                 perferendis sunt doloribus dignissimos blanditiis minus ad aliquam, harum totam eaque placeat fuga
                 explicabo ratione officiis amet consequatur? Voluptatibus.</p>
-            <button type="button" class="btn btn-secondary">Compartir</button>
-            <button type="button" class="btn btn-secondary">Comentar en Twitter</button>
+            <div class="article__buttons row text-sm-center text-md-start ps-3">
+                <div class="col-4 col-lg-1">
+                    <button type="button" class="btn-sm btn-secondary">Compartir</button>
+                </div>
+                <div class="col-8 col-lg-11">
+                    <button type="button" class="btn-sm btn-secondary">Comentar en Twitter</button>
+                </div>
+            </div>
             <hr>
         </div>
     </article>
@@ -127,12 +134,12 @@
     <!------------------- NAV ---------------------->
     <nav class="pagination">
         <div class="pagination__container mx-auto">
-            <div class="btn-group bg-light" role="group" aria-label="First group">
-                <button type="button" class="btn btn-outline-secondary">Anterior</button>
-                <button type="button" class="btn btn-outline-secondary">1</button>
-                <button type="button" class="btn btn-outline-secondary">2</button>
-                <button type="button" class="btn btn-outline-secondary">3</button>
-                <button type="button" class="btn btn-outline-secondary">Siguiente</button>
+            <div class="btn-group" role="group" aria-label="First group">
+                <button type="button" class="btn btn--left btn-outline-dark">Anterior</button>
+                <button type="button" class="btn btn-outline-dark">1</button>
+                <button type="button" class="btn btn-outline-dark">2</button>
+                <button type="button" class="btn btn-outline-dark">3</button>
+                <button type="button" class="btn btn--right btn-outline-dark">Siguiente</button>
             </div>
         </div>
     </nav>
