--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <!------------------- ARTICLE ---------------------->
     <article id="article" class="article py-5">
-        <div class="article__container px-5">
+        <div class="article__container">
             <h3 class="article__date">12 de abril de 2018</h3>
             <p class="article__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat vero
                 repellat praesentium in neque
@@ -116,8 +116,8 @@
                 </div>
                 <div class="col-sm-12 col-lg-2 my-auto">
                     <h2 class="section__name text-lg-start">Naomi Thai</h2>
-                    <h4 class="section__user text-lg-start">@Naothai</h4>
-                    <h4 class="section__link text-lg-start">depelos.com</h4>
+                    <h4 class="section__user text-lg-start"><a class="section__links" href="https://www.instagram.com/" target="_blank">@Naothai</a></h4>
+                    <h4 class="section__link text-lg-start"><a class="section__links" href="https://www.depelos.com/" target="_blank">depelos.com</a></h4>
                 </div>
                 <div class="section__summary d-none d-md-block col-lg-8 my-auto">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos magni numquam, maiores
