--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!------------------- HEADER ---------------------->
     <header class="header">
         <div class="header__container">
-            <h1 class="header__title col-sm-12 col-lg-5">5 formas de cuidar tu corte de cabello</h1>
+            <h1 class="header__title header__title--resize col-sm-12 col-lg-5">5 formas de cuidar tu corte de cabello</h1>
             <a href="#article"><i class="header__scroll fas fa-angle-double-down fa-4x"></i></a>
         </div>
     </header>
@@ -100,7 +100,7 @@
                     <button type="button" class="btn-sm btn-secondary">Compartir</button>
                 </div>
                 <div class="col-8 col-lg-11">
-                    <button type="button" class="btn-sm btn-secondary">Comentar en Twitter</button>
+                    <a href="https://twitter.com/intent/tweet" target="_blank" type="button" class="btn-sm btn-secondary">Comentar en Twitter</a>
                 </div>
             </div>
             <hr>
