--- a/index.html
+++ b/index.html
@@ -60,14 +60,15 @@
     <!------------------- HEADER ---------------------->
     <header class="header">
         <div class="header__container">
-            <h1 class="header__title header__title--resize col-sm-12 col-lg-5">5 formas de cuidar tu corte de cabello</h1>
+            <h1 class="header__title header__title--resize col-sm-12 col-lg-5">5 formas de cuidar tu corte de cabello
+            </h1>
             <a href="#article"><i class="header__scroll fas fa-angle-double-down fa-4x"></i></a>
         </div>
     </header>
 
 
     <!------------------- ARTICLE ---------------------->
-    <article id="article" class="article py-5">
+    <article id="article" class="article py-4">
         <div class="article__container">
             <h3 class="article__date">12 de abril de 2018</h3>
             <p class="article__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat vero
@@ -85,25 +86,28 @@
                 excepturi nulla iste quo
                 voluptatum dicta sequi nisi ab quis mollitia ea recusandae impedit eveniet eos rerum in id explicabo,
                 consequuntur, dolorum voluptas. Excepturi rerum dolorem repellat, dolores officiis laudantium!</p>
-            <p class="article__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio laudantium
+            <p class="article__paragraph d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Optio laudantium
                 maxime repellat rem incidunt
                 quam omnis modi voluptate pariatur illum.</p>
-            <p class="article__paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet cupiditate
+            <p class="article__paragraph d-none d-md-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Amet cupiditate
                 tenetur nemo omnis vero.
                 Accusantium cumque nobis maxime explicabo error voluptates deleniti beatae, dolore facilis
                 necessitatibus veritatis velit saepe ab nostrum totam consequatur autem pariatur repudiandae porro quas
                 molestias sed. Voluptatibus ducimus tempora illum a quis ipsam perspiciatis voluptatem facere autem
                 perferendis sunt doloribus dignissimos blanditiis minus ad aliquam, harum totam eaque placeat fuga
                 explicabo ratione officiis amet consequatur? Voluptatibus.</p>
-            <div class="article__buttons row text-sm-center text-md-start ps-3">
+            <div class="article__buttons row text-sm-center text-md-start">
                 <div class="col-4 col-lg-1">
                     <button type="button" class="btn-sm btn-secondary">Compartir</button>
                 </div>
-                <div class="col-8 col-lg-11">
-                    <a href="https://twitter.com/intent/tweet" target="_blank" type="button" class="btn-sm btn-secondary">Comentar en Twitter</a>
+                <div class="col-8 col-lg-4 pb-5">
+                    <a href="https://twitter.com/intent/tweet" target="_blank" type="button"
+                        class="btn-sm btn-secondary">Comentar en Twitter</a>
                 </div>
             </div>
-            <hr>
+            <hr class="article__horizontal-rule">
         </div>
     </article>
 
@@ -112,12 +116,14 @@
         <div class="section__container container">
             <div class="row">
                 <div class="col col-lg-2 text-center">
-                    <img class="section__img img-thumbnail" src="assets/img/naomi-thai.png" alt="">
+                    <img class="section__img section__img--resize img-thumbnail" src="assets/img/naomi-thai.png" alt="">
                 </div>
                 <div class="col-sm-12 col-lg-2 my-auto">
                     <h2 class="section__name text-lg-start">Naomi Thai</h2>
-                    <h4 class="section__user text-lg-start"><a class="section__links" href="https://www.instagram.com/" target="_blank">@Naothai</a></h4>
-                    <h4 class="section__link text-lg-start"><a class="section__links" href="https://www.depelos.com/" target="_blank">depelos.com</a></h4>
+                    <h4 class="section__user text-lg-start"><a class="section__links" href="https://www.instagram.com/"
+                            target="_blank">@Naothai</a></h4>
+                    <h4 class="section__link text-lg-start"><a class="section__links" href="https://www.depelos.com/"
+                            target="_blank">depelos.com</a></h4>
                 </div>
                 <div class="section__summary d-none d-md-block col-lg-8 my-auto">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos magni numquam, maiores
